// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse valid v1.0 hunt config basic.json 1`] = `
{
  "author": "M. Test",
  "background": "graphics/background.png",
  "beginning": "This is the beginning",
  "clues": [
    {
      "alt": "Khan Academy",
      "id": 1,
      "image": "https://i.pcmag.com/imagery/reviews/07AxdIVbQ63OEkJoPgCybXt-19.1594914797.fit_scale.size_1028x578.png",
      "interactive": undefined,
      "markdown": undefined,
      "text": "The first clue",
      "url": "google.com",
    },
  ],
  "description": "Test Data",
  "encrypted": false,
  "name": "Test Hunt",
  "options": {
    "inOrder": false,
    "silent": false,
  },
  "version": "1.0",
}
`;

exports[`Parse valid v1.0 hunt config encoded.json 1`] = `
{
  "author": "M. Test",
  "background": "graphics/background.png",
  "beginning": "This is the beginning",
  "clues": [
    {
      "alt": "Sr2thvh0blifB3B1Yu25Fuk6ZcWg175",
      "id": 1,
      "image": "afHdRw0lcwH6Me6iLryn97pzLsnsByjfblW6FqnyLtm2Njv3bjSk9qphbcW5FznzZcXdJ15mL83nJdlud4mzlxlad936MovlMkDgdmB5eaGiRhJtV3m4JyR9NmjnNaPoRwWut4Kjb21uBhn1Qq3rldijW7H2QztxMyTxkcu7MkT4U15dN5D9kvx5NjDmcs5xNqyx5pmtayXaR3fxcm2eNqhfbqG1Usu4ch2zlz6uZ4Vb88xmM4DqIh4ie3DvUs3fO0Cy53wvbbmmch=",
      "interactive": undefined,
      "markdown": undefined,
      "text": "VvGohwlqI5GgZ7pccinnNi0eItGfN3s0ddWkU2=",
      "url": "Zb2z98v0Zl2gxqlfLmmiNwvwbbQw=k=",
    },
  ],
  "description": "Test Data",
  "encrypted": true,
  "name": "Test Hunt",
  "options": {
    "inOrder": false,
    "silent": false,
  },
  "version": "1.0",
}
`;

exports[`Parse valid v1.0 hunt config extra.json 1`] = `
{
  "author": "M. Test",
  "background": "graphics/background.png",
  "beginning": "This is the beginning",
  "clues": [
    {
      "alt": "Khan Academy",
      "id": 1,
      "image": "https://i.pcmag.com/imagery/reviews/07AxdIVbQ63OEkJoPgCybXt-19.1594914797.fit_scale.size_1028x578.png",
      "interactive": undefined,
      "markdown": undefined,
      "text": "The first clue",
      "url": "google.com",
    },
  ],
  "description": "Test Data",
  "encrypted": false,
  "name": "Test Hunt",
  "options": {
    "inOrder": false,
    "silent": false,
  },
  "version": "1.0",
}
`;

exports[`Parse valid v1.0 hunt config markdown.json 1`] = `
{
  "author": "M. Test",
  "background": "graphics/background.png",
  "beginning": "This is the beginning",
  "clues": [
    {
      "alt": "Khan Academy",
      "id": 1,
      "image": "https://i.pcmag.com/imagery/reviews/07AxdIVbQ63OEkJoPgCybXt-19.1594914797.fit_scale.size_1028x578.png",
      "interactive": undefined,
      "markdown": undefined,
      "text": "The first clue",
      "url": "google.com",
    },
    {
      "alt": "Khan Academy",
      "id": 2,
      "image": "https://i.pcmag.com/imagery/reviews/07AxdIVbQ63OEkJoPgCybXt-19.1594914797.fit_scale.size_1028x578.png",
      "interactive": undefined,
      "markdown": "### Subheader

The first clue",
      "text": undefined,
      "url": "google.com",
    },
  ],
  "description": "Test Data",
  "encrypted": false,
  "name": "Test Hunt",
  "options": {
    "inOrder": false,
    "silent": false,
  },
  "version": "1.0",
}
`;
